--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -5,12 +5,15 @@
     <color name="black_30">#1e000000</color>
     <color name="transparent">#00FFFFFF</color>
 
+
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="bg_white">#FFFFFFFF</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mainBlue">#1376F6</color>
     <color name="default_text_color">#757575</color>
@@ -27,6 +30,7 @@
     <color name="c44dE">#4dE9EAEC</color>
     <color name="fff7f">#fff7f7f7</color>
     <color name="fff8f">#fff8f9fd</color>
+    <color name="fffd7">#fffd7b84</color>
     <color name="ffd6d">#ffd6d6d6</color>
     <color name="fff5f">#fff5f5f5</color>
 
