--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -45,6 +45,7 @@
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_65">65dp</dimen>
     <dimen name="dp_68">68dp</dimen>
+    <dimen name="dp_70">70dp</dimen>
     <dimen name="dp_72">72dp</dimen>
     <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_85">85dp</dimen>
@@ -68,7 +69,9 @@
     <dimen name="sp_23">23sp</dimen>
     <dimen name="sp_24">24sp</dimen>
     <dimen name="sp_28">28sp</dimen>
-    <dimen name="sp_40">40sp</dimen>
+    <dimen name="sp_30">30sp</dimen>
+    <dimen name="sp_33">33sp</dimen>
+    <dimen name="sp_35">35sp</dimen>
 
 
     <dimen name="px_2">2px</dimen>
@@ -76,5 +79,22 @@
     <dimen name="fragment_horizontal_margin">16dp</dimen>
     <dimen name="fragment_vertical_margin">16dp</dimen>
 
+
+
+
+    <!-- Navigation -->
+    <dimen name="nav_drawer_width">@dimen/match_parent</dimen>
+    <dimen name="nav_account_image_size">32dp</dimen>
+    <dimen name="nav_header_logo_size">36dp</dimen>
+    <dimen name="nav_item_horizontal_padding">24dp</dimen>
+    <!-- Intrinsic height may vary. Use a large radius to ensure a semicircle. -->
+    <dimen name="nav_item_background_corner_radius_left">0dp</dimen>
+    <dimen name="nav_item_background_corner_radius_right">100dp</dimen>
+    <dimen name="nav_item_background_inset_left">0dp</dimen>
+    <dimen name="nav_item_background_inset_right">8dp</dimen>>
+
+
+    <item name="match_parent" format="integer" type="dimen">-1</item>
+    <item name="wrap_content" format="integer" type="dimen">-2</item>
 
 </resources>
