--- a/common/src/main/res/anim/slide_out_from_right.xml
+++ b/common/src/main/res/anim/slide_out_from_right.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="400">
+   >
+
     <translate
-        android:fromYDelta="0%p"
-        android:toYDelta="100%p"
-        />
+        android:fromXDelta="0%p"
+        android:toXDelta="-100%p"
+        android:duration="500"/>
+
 </set>
