--- a/common/src/main/res/layout/placeholder_view.xml
+++ b/common/src/main/res/layout/placeholder_view.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/clPlaceholder"
+    android:layout_width="match_parent"
+    android:padding="@dimen/dp_100"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/ivPlaceholder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/icon_no_hw"
+        android:background="@drawable/ic_no_content_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="@dimen/dp_100"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -21,10 +23,33 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/hint_no_content"
-        android:textSize="16sp"
+        android:textSize="@dimen/sp_18"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivPlaceholder" />
+
+    <TextView
+        android:id="@+id/tvLabel1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+         android:textSize="@dimen/sp_16"
+        android:visibility="gone"
+         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvPlaceholder" />
+
+    <TextView
+        android:id="@+id/tvLabel2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+         android:visibility="gone"
+        android:textSize="@dimen/sp_14"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvLabel1" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
