--- a/common/src/main/res/anim/slide_in_from_bottom.xml
+++ b/common/src/main/res/anim/slide_in_from_bottom.xml
@@ -3,7 +3,7 @@
 
     <translate
         android:duration="200"
-        android:fromXDelta="100%p"
-        android:toXDelta="0%p" />
+        android:fromYDelta="100%p"
+        android:toYDelta="0%p" />
 
 </set>
